--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
    background-image: url(https://cdn.pixabay.com/photo/2016/11/21/15/58/wedding-1846114_960_720.jpg);
    background-repeat: no-repeat;
    background-size: cover;
-   overflow-x: hidden;
+   overflow-y: hidden;
    height: 100vh;
    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 
@@ -32,7 +32,7 @@ body {
 }
 
 .forms h1 {
-   color: #042940;
+   color: rgb(33, 32, 32);
    margin-bottom: 10px;
    font-weight: 500;
 
@@ -45,7 +45,7 @@ body {
 .inputDados {
    border: 1px solid black;
    border-radius: 5px;
-   width: 40%;
+   width: 50%;
    height: 45px;
    padding: 5px 10px;
    cursor: pointer;
@@ -57,24 +57,23 @@ body {
 }
 
 .inputDados:hover {
-   border: 1px solid rgb(65, 65, 206);
-
+background-color: rgba(128, 128, 128, 0.481);
 }
 
 .forms .submitDados {
    background-color: #042940;
    color: white;
-   width: 30%;
+   width: 50%;
    height: 45px;
    border-radius: 10px;
    padding: 5px 10px;
    margin-top: 10px;
    cursor: pointer;
-
+   transition: all .5s;
 }
 
 .forms .submitDados:hover {
-   border: 1px solid rgb(52, 52, 228);
+   background-color: rgba(0, 0, 0, 0.889);
 
 }
 
@@ -98,6 +97,22 @@ body {
    color: green;
 }
 
+@media screen and (max-width:700px) {
+  
+   .forms {
+      background-color: rgba(252, 250, 250, 0.442);
+      width: 70%;
+      color: black;
+   }
+
+   .inputDados {
+      width: 60%;
+   }
+
+   .forms .submitDados {
+      width: 60%;
+   }
+}
 @media screen and (max-width:375px) {
   
    .forms {
