--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-   background-image: url(https://cdn.pixabay.com/photo/2016/11/21/15/58/wedding-1846114_960_720.jpg);
+   background-image: url(https://img.myloview.com.br/posters/cosmeticos-no-fundo-escuro-700-65952844.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    overflow-y: hidden;
@@ -16,7 +16,7 @@ body {
 }
 
 .forms {
-   background-color: rgba(252, 250, 250, 0.261);
+   background-color: rgba(255, 255, 255, 0.467);
    border-radius: 40px;
    width: 50%;
    display: flex;
@@ -27,7 +27,7 @@ body {
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px 0;
-   color: white;
+   color: rgb(0, 0, 0);
 
 }
 
